# nt2-config

./: README.md  env_nt2.example  env_nt2_secrets.example  nt2_config.example  pyproject.toml
nt2_config/: cli.py  config.py
tests/: test_nt2_config.py
